-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.14.1
-
-
ae5255cebd7fd00598cd63fabc36c98cf2b39288 (qt-creator/qt-creator/master)
Install Qt6.0.1 Android binaries, launch Creator and open project gui/analogclock, using cmake mode. Compilation fails:
09:27:40: Running steps for project analogclock... 09:27:40: Persisting CMake state... 09:28:19: Starting: "C:\Qt\601_android\Tools\CMake_64\bin\cmake.exe" --build . --target all gui_analogclock_prepare_apk_dir [1/6 0.1/sec] Automatic MOC and UIC for target gui_analogclock [2/6 0.1/sec] Building CXX object CMakeFiles/gui_analogclock.dir/gui_analogclock_autogen/mocs_compilation.cpp.o [3/6 0.2/sec] Building CXX object CMakeFiles/gui_analogclock.dir/C_/Qt/601_android/Examples/Qt-6.0.1/gui/rasterwindow/rasterwindow.cpp.o [4/6 0.2/sec] Building CXX object CMakeFiles/gui_analogclock.dir/main.cpp.o [5/6 0.3/sec] Linking CXX shared module libgui_analogclock_arm64-v8a.so [6/6 0.3/sec] Copying gui_analogclock binarty to apk folder 09:28:39: The process "C:\Qt\601_android\Tools\CMake_64\bin\cmake.exe" exited normally. 09:28:39: Starting: "C:\Qt\601_android\6.0.1\mingw81_64\bin\androiddeployqt.exe" --input C:/Qt/601_android/Examples/Qt-6.0.1/gui/build-analogclock-Android_Qt_6_0_0_Clang_arm64_v8a-Debug/android-analogclock-deployment-settings.json --output C:/Qt/601_android/Examples/Qt-6.0.1/gui/build-analogclock-Android_Qt_6_0_0_Clang_arm64_v8a-Debug/android-build --android-platform android-30 --jdk "C:/Program Files/Java/jdk1.8.0_144" --gradle No target architecture defined in json file. 09:28:40: The process "C:\Qt\601_android\6.0.1\mingw81_64\bin\androiddeployqt.exe" exited with code 2. Error while building/deploying project analogclock (kit: Android Qt 6.0.0 Clang arm64-v8a) When executing step "Build Android APK" 09:28:40: Elapsed time: 01:00.
Same installation will have MinGW binaries installed automatically, if using those binaries to example will compile fine.
Randomly picked demos/calqlator also fails, when (also randomly picked) widgets/widgets/wiggly builds fine and runs on Android device.
- resulted from
-
QTBUG-87131 QC not using deployment-settings.json file generated by CMake
-
- Closed
-