src/plugins/android/androidqtversion.cpp
@@ -35,7 +35,9 @@
 #include <qtsupport/qtsupportconstants.h>
 #include <qtsupport/qtversionmanager.h>
 
+#include <projectexplorer/buildconfiguration.h>
 #include <projectexplorer/projectexplorerconstants.h>
+#include <projectexplorer/projectnodes.h>
 #include <projectexplorer/target.h>
 #include <projectexplorer/kit.h>
 #include <projectexplorer/project.h>
@@ -167,6 +169,24 @@ int AndroidQtVersion::minimumNDK() const
 {
     ensureMkSpecParsed();
     return m_minNdk;
+}
+
+Utils::FilePath AndroidQtVersion::androidDeploymentSettings(const Target *target)
+{
+    // Try to fetch the file name from node data as provided by qmake and Qbs
+    const QString buildKey = target->activeBuildKey();
+    const ProjectNode *node = target->project()->findNodeForBuildKey(buildKey);
+    if (node) {
+        const QString nameFromData = node->data(Constants::AndroidDeploySettingsFile).toString();
+        if (!nameFromData.isEmpty())
+            return Utils::FilePath::fromUserInput(nameFromData);
+    }
+    // If unavailable, construct the name by ourselves (CMake)
+    const BaseQtVersion *qt = QtSupport::QtKitAspect::qtVersion(target->kit());
+    const bool isQt6 = qt && qt->qtVersion() >= QtSupport::QtVersionNumber{6, 0, 0};
+    return target->activeBuildConfiguration()->buildDirectory().pathAppended(
+                isQt6 ? QString::fromLatin1("android-%1-deployment-settings.json").arg(buildKey)
+                      : QLatin1String("android_deployment_settings.json"));
 }
 
 void AndroidQtVersion::parseMkSpec(ProFileEvaluator *evaluator) const
